Cambio de nombre

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ nada de estos lenguajes. Si quieres aprender luego, te recomendamos ver lo sigui
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- Este es el título que se muestra en el navegador. -->
-    <title>¡Hola mundo!</title>
+    <title>¡Hola gentecita!</title>
     <!-- Este es el estilo de la página. ¡Puedes modificarlo como quieras! -->
     <style>
       :root {
@@ -39,7 +39,7 @@ nada de estos lenguajes. Si quieres aprender luego, te recomendamos ver lo sigui
   </head>
   <!-- Dentro de body puedes añadir y modificar el contenido de la página. -->
   <body>
-    <h1>¡Hola mundo!</h1>
+    <h1>¡Hola gentecita!^^</h1>
   </body>
   <script>
     // Aquí puedes dejar código JavaScript que se ejecutará cuando la página se cargue.
